--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-# PDF extraction
+# CPU-only PyTorch (saves ~1GB vs full CUDA build)
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch
+torchvision
+
+# PDF extraction (uses torch for ML models)
 docling>=2.3.0
 
-# OCR fallback
+# OCR fallback (lightweight, ONNX-based — no PaddlePaddle needed)
 opencv-python-headless>=4.8.0
-paddlepaddle>=2.6.0
-paddleocr>=2.9.0
 rapidocr-onnxruntime>=1.3.0
 
 # File watcher
