--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ docling>=2.3.0
 
 # OCR fallback (lightweight, ONNX-based — no PaddlePaddle needed)
 opencv-python-headless>=4.8.0
-rapidocr-onnxruntime>=1.3.0
+rapidocr>=3.0.0
 
 # File watcher
 watchdog>=4.0.0
