Reverted few cchanges

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-# CPU-only PyTorch (saves ~1GB vs full CUDA build, same quality)
---extra-index-url https://download.pytorch.org/whl/cpu
-torch
-torchvision
-
 # PDF extraction
 docling>=2.3.0
 
-# OCR engines (Docling primary, PaddleOCR fallback)
+# OCR fallback
 opencv-python-headless>=4.8.0
 paddlepaddle>=2.6.0
 paddleocr>=2.9.0
-rapidocr>=3.0.0
+rapidocr-onnxruntime>=1.3.0
 
 # File watcher
 watchdog>=4.0.0
